--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios --port 8087",
     "start": "react-native start --port 8087",
-    "test": "jest",
+    "test": "jest --watch",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "art": "^0.10.3",
+    "jest-enzyme": "^7.1.2",
+    "path": "^0.12.7",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-dom": "^16.13.1",
+    "react-native": "0.63.2",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-mock-render": "^0.1.9",
+    "react-native-reanimated": "^1.10.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "remote-redux-devtools": "^0.5.16",
+    "sinon": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -19,11 +31,34 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.2.2",
     "eslint": "^7.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-preact-pure": "^2.2.1",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.9.0",
+    "eslint-plugin-jest-formatting": "^1.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "jest": "^26.2.2",
     "metro-react-native-babel-preset": "^0.61.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
+    "testEnvironment": "enzyme",
+    "setupFiles": [
+      "./jest/setup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
