--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "remote-redux-devtools": "^0.5.16",
     "sinon": "^9.0.2"
   },
